wordpress/4.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - name: wordpress
        image: wordpress:php8.0-fpm-alpine
        lifecycle:
          postStart:
            exec:
              command:
                - "bash"
                - "-c"
                - |
                  chmod 755 /uploads
                  chown -R www-data:www-data /uploads
                  mkdir -p /var/www/html/wp-content
                  ln -sf /uploads /var/www/html/wp-content/uploads
                  chown -R www-data:www-data /var/www/html/wp-content/uploads
        volumeMounts:
        - name: wordpress-storage2
          mountPath: /uploads
        - name: wordpress-storage
          mountPath: /var/www/html
        ports:
        - containerPort: 9000
      - name: nginx
        image: nginx:1.16.1
        volumeMounts:
        - name: nginx-proxy-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: wordpress-storage
          mountPath: /var/www/html
        - name: wordpress-storage2
          mountPath: /uploads
        ports:
        - containerPort: 80
      volumes:
      - name: nginx-proxy-config
        configMap:
          name: nginx-conf
      - name: wordpress-storage
        emptyDir: {}
      - name: wordpress-storage2
        persistentVolumeClaim:
          claimName: efs-claim
